--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ali Aljahmi | Portfolio</title>
     <meta name="description" content="Portfolio of Ali Aljahmi: AlfiBaT, WordRonin, REVO, AimGame." />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header class="site-header">
