--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <section class="hero">
         <div class="container hero-grid">
           <div>
-            <p class="eyebrow">Computer Science graduate · Apple Developer Academy</p>
+            <p class="eyebrow">Computer Science graduate · Apple Developer Academ Participant</p>
             <h1>Building and analyzing digital products with users in mind.</h1>
             <p class="subhead">
               I work at the intersection of product, UX, and engineering. I like early stage builds, tight feedback loops, and measurable improvement.
@@ -141,7 +141,6 @@
               </p>
               <div class="links">
                 <a href="#" aria-disabled="true">Repo (add link)</a>
-                <a href="#" aria-disabled="true">Writeup (optional)</a>
               </div>
             </article>
 
