--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
           <a href="#projects">Projects</a>
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
-          <!-- Contact link removed since we're removing the contact section -->
         </nav>
       </div>
     </header>
@@ -25,7 +24,7 @@
       <section class="hero">
         <div class="container hero-grid">
           <div>
-            <p class="eyebrow">Computer Science graduate · Apple Developer Academy Participant</p>
+            <p class="eyebrow">Computer Science graduate · Apple Developer Academy</p>
             <h1>Building and analyzing digital products with users in mind.</h1>
             <p class="subhead">
               I work at the intersection of product, UX, and engineering. I like early stage builds, tight feedback loops, and measurable improvement.
@@ -33,30 +32,29 @@
 
             <div class="cta-row">
               <a class="btn primary" href="#projects">View projects</a>
-              <a class="btn ghost" href="#connect">Connect</a> <!-- Changed from #contact to #connect -->
+              <a class="btn ghost" href="#connect">Connect</a>
             </div>
-
-            <!-- REMOVED quick-links from here -->
           </div>
 
           <div class="hero-card" role="region" aria-label="Highlights">
+            <!-- UPDATED STATS -->
             <div class="stat">
               <div class="stat-num">4</div>
-              <div class="stat-label">Core projects</div>
+              <div class="stat-label">Total Projects</div>
             </div>
             <div class="stat">
               <div class="stat-num">2</div>
-              <div class="stat-label">In progress builds</div>
+              <div class="stat-label">Actively Iterating</div>
             </div>
             <div class="stat">
               <div class="stat-num">1</div>
-              <div class="stat-label">Research system</div>
+              <div class="stat-label">Live Web Demo</div>
             </div>
 
             <div class="callout">
               <p class="callout-title">Currently</p>
               <p class="callout-text">
-                Iterating on AlfiBaT and WordRonin while keeping REVO and AimGame as stable references of completed work.
+                Iterating on AlfiBaT and WordRonin. REVO and AimGame represent completed work with different technical focuses.
               </p>
             </div>
           </div>
@@ -90,7 +88,8 @@
                 Current focus: tightening the learning flow, clearer guidance for right to left writing, and better onboarding.
               </p>
               <div class="links">
-                <a href="#" aria-disabled="true">Demo Soon</a>
+                <a href="#" aria-disabled="true">Repo (coming soon)</a>
+                <a href="#" aria-disabled="true">Demo (coming soon)</a>
               </div>
             </article>
 
@@ -111,7 +110,8 @@
                 Current focus: tuning pacing, reward design, and accessible modes that work without visual dependency.
               </p>
               <div class="links">
-                <a href="#" aria-disabled="true">Demo Soon</a>
+                <a href="#" aria-disabled="true">Repo (coming soon)</a>
+                <a href="#" aria-disabled="true">Demo (coming soon)</a>
               </div>
             </article>
 
@@ -132,7 +132,8 @@
                 Emphasis: turning complex runs into understandable artifacts, insights, and failure case summaries.
               </p>
               <div class="links">
-                <a href="#" aria-disabled="true">Repo (add link)</a>
+                <a href="#" aria-disabled="true">Repo (coming soon)</a>
+                <a href="#" aria-disabled="true">Writeup (coming soon)</a>
               </div>
             </article>
 
@@ -153,7 +154,8 @@
                 Emphasis: fast iteration, user configuration, and a clear feedback loop between settings and outcomes.
               </p>
               <div class="links">
-                <a href="https://alialj.github.io/Aim/" target="_blank" rel="noreferrer">Live</a>
+                <a href="https://alialj.github.io/Aim/" target="_blank" rel="noreferrer">Live Demo</a>
+                <a href="https://github.com/AliAlj/Aim" target="_blank" rel="noreferrer">Source Code</a>
               </div>
             </article>
           </div>
@@ -206,7 +208,6 @@
         </div>
       </section>
 
-      <!-- NEW CONNECT SECTION -->
       <section id="connect" class="section alt">
         <div class="container">
           <div class="section-head">
@@ -222,9 +223,9 @@
               <span class="connect-text">/AliAlj</span>
             </a>
             
-            <a href="https://www.linkedin.com/" target="_blank" rel="noreferrer" class="connect-link">
+            <a href="https://www.linkedin.com/in/alialj" target="_blank" rel="noreferrer" class="connect-link">
               <span class="connect-icon">LinkedIn</span>
-              <span class="connect-text">/AliAlj</span>
+              <span class="connect-text">/alialj</span>
             </a>
             
             <a href="mailto:alimjahmi@gmail.com" class="connect-link">
@@ -234,7 +235,6 @@
           </div>
         </div>
       </section>
-      <!-- END NEW CONNECT SECTION -->
     </main>
 
     <footer class="footer">
