--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <section class="hero">
         <div class="container hero-grid">
           <div>
-            <p class="eyebrow">Computer Science graduate · Apple Developer Academy</p>
+            <!-- UPDATED: Apple Developer Academy Participant -->
+            <p class="eyebrow">Computer Science graduate · Apple Developer Academy Participant</p>
             <h1>Building and analyzing digital products with users in mind.</h1>
             <p class="subhead">
               I work at the intersection of product, UX, and engineering. I like early stage builds, tight feedback loops, and measurable improvement.
@@ -37,18 +38,17 @@
           </div>
 
           <div class="hero-card" role="region" aria-label="Highlights">
-            <!-- UPDATED STATS -->
             <div class="stat">
               <div class="stat-num">4</div>
-              <div class="stat-label">Total Projects</div>
+              <div class="stat-label">Projects shown</div>
             </div>
             <div class="stat">
               <div class="stat-num">2</div>
-              <div class="stat-label">Actively Iterating</div>
+              <div class="stat-label">Actively iterating</div>
             </div>
             <div class="stat">
               <div class="stat-num">1</div>
-              <div class="stat-label">Live Web Demo</div>
+              <div class="stat-label">Live web demo</div>
             </div>
 
             <div class="callout">
@@ -87,10 +87,7 @@
               <p class="small">
                 Current focus: tightening the learning flow, clearer guidance for right to left writing, and better onboarding.
               </p>
-              <div class="links">
-                <a href="#" aria-disabled="true">Repo (coming soon)</a>
-                <a href="#" aria-disabled="true">Demo (coming soon)</a>
-              </div>
+              <!-- REMOVED links for in-progress projects -->
             </article>
 
             <article class="card">
@@ -109,10 +106,7 @@
               <p class="small">
                 Current focus: tuning pacing, reward design, and accessible modes that work without visual dependency.
               </p>
-              <div class="links">
-                <a href="#" aria-disabled="true">Repo (coming soon)</a>
-                <a href="#" aria-disabled="true">Demo (coming soon)</a>
-              </div>
+              <!-- REMOVED links for in-progress projects -->
             </article>
 
             <article class="card">
@@ -132,8 +126,8 @@
                 Emphasis: turning complex runs into understandable artifacts, insights, and failure case summaries.
               </p>
               <div class="links">
-                <a href="#" aria-disabled="true">Repo (coming soon)</a>
-                <a href="#" aria-disabled="true">Writeup (coming soon)</a>
+                <!-- ONLY keeping repo link for REVO -->
+                <a href="https://github.com/AliAlj/REVO" target="_blank" rel="noreferrer">Source Code</a>
               </div>
             </article>
 
@@ -154,6 +148,7 @@
                 Emphasis: fast iteration, user configuration, and a clear feedback loop between settings and outcomes.
               </p>
               <div class="links">
+                <!-- Live demo and repo for AimGame -->
                 <a href="https://alialj.github.io/Aim/" target="_blank" rel="noreferrer">Live Demo</a>
                 <a href="https://github.com/AliAlj/Aim" target="_blank" rel="noreferrer">Source Code</a>
               </div>
@@ -167,7 +162,7 @@
           <div>
             <h2>About</h2>
             <p>
-              I am Ali Aljahmi, a Computer Science graduate from the University of Michigan Dearborn and a student in the Apple Developer Academy. I enjoy building early stage digital products, learning from real feedback, and improving experiences through careful iteration.
+              I am Ali Aljahmi, a Computer Science graduate from the University of Michigan Dearborn and an Apple Developer Academy Participant. I enjoy building early stage digital products, learning from real feedback, and improving experiences through careful iteration.
             </p>
             <p>
               For the Digital Summer Clinic, I am excited by the idea of working with startups, shipping useful work quickly, and supporting decisions with data and clear communication.
