--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
           <div class="hero-card" role="region" aria-label="Highlights">
             <div class="stat">
               <div class="stat-num">4</div>
-              <div class="stat-label">Projects shown</div>
+              <div class="stat-label">Total Projects</div>
             </div>
             <div class="stat">
               <div class="stat-num">2</div>
-              <div class="stat-label">Actively iterating</div>
+              <div class="stat-label">Actively Iterating</div>
             </div>
             <div class="stat">
               <div class="stat-num">1</div>
-              <div class="stat-label">Live web demo</div>
+              <div class="stat-label">Live Web Demo</div>
             </div>
 
             <div class="callout">
