--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <section class="hero">
         <div class="container hero-grid">
           <div>
-            <!-- UPDATED: Apple Developer Academy Participant -->
-            <p class="eyebrow">Computer Science graduate · Apple Developer Academy Participant</p>
+            <p class="eyebrow">Computer Science Graduate · Apple Developer Academy Participant</p>
             <h1>Building and analyzing digital products with users in mind.</h1>
             <p class="subhead">
               I work at the intersection of product, UX, and engineering. I like early stage builds, tight feedback loops, and measurable improvement.
