Add assets folder with AlfiBaT logo

--- a/index.html
+++ b/index.html
@@ -71,10 +71,17 @@
 
           <div class="grid">
             <article class="card">
-              <div class="card-top">
-                <h3>AlfiBaT</h3>
-                <span class="badge inprogress">In progress</span>
-              </div>
+                <div class="card-top project-title">
+                    <div class="project-name">
+                    <img
+                        src="./assets/alfibat-logo.png"
+                        alt="AlfiBaT app logo"
+                        class="project-logo"
+                    />
+                    <h3>AlfiBaT</h3>
+                    </div>
+                    <span class="badge inprogress">In progress</span>
+                </div>
               <p class="muted">
                 iPad learning experience for Arabic letters using touch, audio feedback, and guided practice.
               </p>
