--- a/index.html
+++ b/index.html
@@ -97,10 +97,17 @@
             </article>
 
             <article class="card">
-              <div class="card-top">
-                <h3>WordRonin</h3>
-                <span class="badge inprogress">In progress</span>
-              </div>
+                <div class="card-top project-title">
+                    <div class="project-name">
+                    <img
+                        src="./assets/wordronin-logo.png"
+                        alt="WordRonin app logo"
+                        class="project-logo"
+                    />
+                    <h3>WordRonin</h3>
+                    </div>
+                    <span class="badge inprogress">In progress</span>
+                </div>
               <p class="muted">
                 Fast paced word game exploring engagement, scoring, and accessibility friendly interaction.
               </p>
@@ -138,8 +145,15 @@
             </article>
 
             <article class="card">
-              <div class="card-top">
-                <h3>AimGame</h3>
+               <div class="card-top project-title">
+                    <div class="project-name">
+                    <img
+                        src="./assets/aimgame-logo.png"
+                        alt="aimgame app logo"
+                        class="project-logo"
+                    />
+                    <h3>AimGame</h3>
+                    </div>
                 <span class="badge complete">Complete</span>
               </div>
               <p class="muted">
@@ -155,8 +169,8 @@
               </p>
               <div class="links">
                 <!-- Live demo and repo for AimGame -->
-                <a href="https://alialj.github.io/Aim/" target="_blank" rel="noreferrer">Live Demo</a>
-                <a href="https://github.com/AliAlj/Aim" target="_blank" rel="noreferrer">Source Code</a>
+                <a href="https://aliatumich.github.io/AimGame/" target="_blank" rel="noreferrer">Live Demo</a>
+                <a href="https://github.com/AliAtUmich/AimGame" target="_blank" rel="noreferrer">Source Code</a>
               </div>
             </article>
           </div>
