--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               </p>
               <div class="links">
                 <!-- ONLY keeping repo link for REVO -->
-                <a href="https://github.com/AliAlj/REVO" target="_blank" rel="noreferrer">Source Code</a>
+                <a href="https://github.com/AliAtUmich/REVO-LLM-Autonomous-Driving" target="_blank" rel="noreferrer">Source Code</a>
               </div>
             </article>
 
