--- a/index.html
+++ b/index.html
@@ -123,26 +123,34 @@
             </article>
 
             <article class="card">
-              <div class="card-top">
-                <h3>REVO</h3>
-                <span class="badge complete">Complete</span>
-              </div>
-              <p class="muted">
-                Tooling to log, analyze, and visualize decision making behavior for closed loop autonomous driving in simulation.
-              </p>
-              <div class="meta">
-                <span class="pill">Python</span>
-                <span class="pill">CARLA</span>
-                <span class="pill">Analysis</span>
-              </div>
-              <p class="small">
-                Emphasis: turning complex runs into understandable artifacts, insights, and failure case summaries.
-              </p>
-              <div class="links">
-                <!-- ONLY keeping repo link for REVO -->
-                <a href="https://github.com/AliAtUmich/REVO-LLM-Autonomous-Driving" target="_blank" rel="noreferrer">Source Code</a>
-              </div>
+                <div class="card-top">
+                    <h3>REVO</h3>
+                    <span class="badge complete">Complete</span>
+                </div>
+
+                <p class="muted">
+                    Research framework for analyzing reasoning quality, decision making behavior, and driving performance of LLM based autonomous agents in closed loop simulation using CARLA.
+                </p>
+
+                <div class="meta">
+                    <span class="pill">Python</span>
+                    <span class="pill">CARLA</span>
+                    <span class="pill">LLM Evaluation</span>
+                </div>
+
+                <p class="small">
+                    REVO evaluates agents across progressively challenging scenarios including dense traffic, pedestrians, intersections, and variable environmental conditions, while logging behavioral metrics, motion planning outputs, and reasoning traces.
+                </p>
+
+                <p class="small">
+                    Visualization tools align perception cues, internal reasoning steps, and policy decisions along the agent’s route to enable structured comparison across multiple AI agents.
+                </p>
+
+                <div class="links">
+                    <a href="https://github.com/AliAlj/REVO" target="_blank" rel="noreferrer">Source Code</a>
+                </div>
             </article>
+
 
             <article class="card">
                <div class="card-top project-title">
