--- a/index.html
+++ b/index.html
@@ -139,11 +139,7 @@
                 </div>
 
                 <p class="small">
-                    REVO evaluates agents across progressively challenging scenarios including dense traffic, pedestrians, intersections, and variable environmental conditions, while logging behavioral metrics, motion planning outputs, and reasoning traces.
-                </p>
-
-                <p class="small">
-                    Visualization tools align perception cues, internal reasoning steps, and policy decisions along the agent’s route to enable structured comparison across multiple AI agents.
+                   REVO evaluates LLM based driving agents across challenging CARLA scenarios by logging behavior, planning outputs, and reasoning traces and visualizing how decisions evolve over each route.
                 </p>
 
                 <div class="links">
