--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
 
                 <p class="muted">
-                    Research framework for analyzing reasoning quality, decision making behavior, and driving performance of LLM based autonomous agents in closed loop simulation using CARLA.
+                    Research framework for evaluating reasoning and decision behavior of LLM based autonomous agents in CARLA.
                 </p>
 
                 <div class="meta">
