--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="meta">
                 <span class="pill">SwiftUI</span>
                 <span class="pill">PencilKit</span>
-                <span class="pill">Accessibility</span>
+                <span class="pill">Language learning UX</span>
               </div>
               <p class="small">
                 Current focus: tightening the learning flow, clearer guidance for right to left writing, and better onboarding.
@@ -165,8 +165,8 @@
               </p>
               <div class="meta">
                 <span class="pill">JavaScript</span>
-                <span class="pill">Canvas</span>
-                <span class="pill">Metrics</span>
+                <span class="pill">HTML</span>
+                <span class="pill">CSS</span>
               </div>
               <p class="small">
                 Emphasis: fast iteration, user configuration, and a clear feedback loop between settings and outcomes.
