--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               >GitHub</a
             >
             <a
-              href="https://www.linkedin.com/in/alialj"
+              href="https://www.linkedin.com/in/ali-alj/"
               target="_blank"
               rel="noreferrer"
               class="connect-link"
