Update portfolio content and add project pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ali Aljahmi | Portfolio</title>
-    <meta name="description" content="Portfolio of Ali Aljahmi: AlfiBaT, WordRonin, REVO, AimGame." />
+    <meta
+      name="description"
+      content="Portfolio of Ali Aljahmi: AlfiBaT, WordRonin, REVO, AimGame."
+    />
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
@@ -23,51 +26,53 @@
     </header>
 
     <main id="top">
-      <!-- HERO (MINIMAL) -->
+      <!-- HERO -->
       <section class="hero">
         <div class="container">
           <p class="eyebrow">
             Computer Science Graduate · Apple Developer Academy Junior Learner
           </p>
 
+          <h1>Building clear, iterative products</h1>
+
+          <p class="subhead">
+            I build iOS and web experiences with a focus on UX clarity,
+            fast iteration, and measurable feedback loops.
+          </p>
+
           <div class="cta-row">
-            <a class="btn primary" href="#about">About me</a>
-            <a class="btn ghost" href="#projects">Projects</a>
+            <a class="btn primary" href="#projects">View projects</a>
+            <a class="btn ghost" href="#about">About me</a>
             <a class="btn ghost" href="#connect">Connect</a>
           </div>
         </div>
       </section>
 
-      <!-- ABOUT FIRST -->
+      <!-- ABOUT -->
       <section id="about" class="section">
         <div class="container two-col">
           <div>
             <h2>About</h2>
             <p>
-              I am Ali Aljahmi, a Computer Science graduate from the University of
-              Michigan Dearborn and a Junior Learner at the Apple Developer Academy.
-              I enjoy building early stage digital products, learning from real
-              feedback, and improving experiences through careful iteration.
+              I am Ali Aljahmi, a Computer Science graduate from the University
+              of Michigan Dearborn and a Junior Learner at the Apple Developer Academy.
+              I enjoy building early stage products, learning from real feedback,
+              and improving experiences through iteration.
             </p>
+
             <p>
-              One of my strengths is giving constructive feedback on early ideas by
-              spotting small changes or alternative perspectives that meaningfully
-              improve a project’s direction.
-            </p>
-            <p>
-              For the Digital Summer Clinic, I am excited by the idea of working
-              closely with startups, shipping useful work quickly, and supporting
-              decisions with data and clear communication.
+              One of my strengths is giving constructive feedback on early ideas
+              by spotting small changes or alternative perspectives that
+              meaningfully improve a project’s direction.
             </p>
           </div>
 
           <div class="about-card">
             <h3 class="about-title">What I bring</h3>
             <ul class="list">
-              <li>Thoughtful, constructive feedback on early ideas</li>
-              <li>Comfort working in ambiguous, iterative environments</li>
-              <li>Ability to turn complex work into clear outputs</li>
-              <li>Strong written and verbal communication</li>
+              <li>Turn open ended problems into concrete next steps</li>
+              <li>Organize complex work into clear, usable outputs</li>
+              <li>Communicate decisions and progress clearly</li>
             </ul>
           </div>
         </div>
@@ -86,65 +91,70 @@
 
           <div class="grid">
             <!-- ALFIBAT -->
-            <article class="card">
-              <div class="card-top project-title">
-                <div class="project-name">
-                  <img
-                    src="./assets/alfibat-logo.png"
-                    alt="AlfiBaT app logo"
-                    class="project-logo"
-                  />
-                  <h3>AlfiBaT</h3>
+            <a href="./alfibat.html" class="card-link">
+              <article class="card">
+                <div class="card-top project-title">
+                  <div class="project-name">
+                    <img
+                      src="./assets/alfibat-logo.png"
+                      alt="AlfiBaT app logo"
+                      class="project-logo"
+                    />
+                    <h3>AlfiBaT</h3>
+                  </div>
+                  <span class="badge inprogress">In progress</span>
                 </div>
-                <span class="badge inprogress">In progress</span>
-              </div>
 
-              <p class="muted">
-                iPad learning experience for Arabic letters using touch, audio
-                feedback, and guided practice.
-              </p>
+                <p class="muted">
+                  iPad learning experience for Arabic letters using touch,
+                  audio feedback, and guided practice.
+                </p>
 
-              <div class="meta">
-                <span class="pill">SwiftUI</span>
-                <span class="pill">PencilKit</span>
-                <span class="pill">Language learning UX</span>
-              </div>
+                <div class="meta">
+                  <span class="pill">SwiftUI</span>
+                  <span class="pill">PencilKit</span>
+                  <span class="pill">Language learning UX</span>
+                </div>
 
-              <p class="small">
-                Current focus: improving learning flow, clearer right to left
-                guidance, and onboarding.
-              </p>
-            </article>
+                <p class="small">
+                  Outcome: built focused learning loops for recognition,
+                  pronunciation, and writing practice.
+                </p>
+              </article>
+            </a>
 
             <!-- WORDRONIN -->
-            <article class="card">
-              <div class="card-top project-title">
-                <div class="project-name">
-                  <img
-                    src="./assets/wordronin-logo.png"
-                    alt="WordRonin app logo"
-                    class="project-logo"
-                  />
-                  <h3>WordRonin</h3>
+            <a href="./wordronin.html" class="card-link">
+              <article class="card">
+                <div class="card-top project-title">
+                  <div class="project-name">
+                    <img
+                      src="./assets/wordronin-logo.png"
+                      alt="WordRonin app logo"
+                      class="project-logo"
+                    />
+                    <h3>WordRonin</h3>
+                  </div>
+                  <span class="badge inprogress">In progress</span>
                 </div>
-                <span class="badge inprogress">In progress</span>
-              </div>
 
-              <p class="muted">
-                Fast paced word game exploring engagement, scoring systems, and
-                real time player feedback.
-              </p>
+                <p class="muted">
+                  Fast paced word game exploring engagement, scoring systems,
+                  and real time player feedback.
+                </p>
 
-              <div class="meta">
-                <span class="pill">iOS</span>
-                <span class="pill">Game loop</span>
-                <span class="pill">Engagement design</span>
-              </div>
+                <div class="meta">
+                  <span class="pill">iOS</span>
+                  <span class="pill">Game loop</span>
+                  <span class="pill">Engagement design</span>
+                </div>
 
-              <p class="small">
-                Current focus: pacing, reward tuning, and accessible play modes.
-              </p>
-            </article>
+                <p class="small">
+                  Outcome: implemented a core gameplay loop designed for fast
+                  iteration and playtesting.
+                </p>
+              </article>
+            </a>
 
             <!-- REVO -->
             <article class="card">
@@ -154,8 +164,8 @@
               </div>
 
               <p class="muted">
-                Research framework for evaluating reasoning and decision behavior
-                of LLM based autonomous agents in CARLA.
+                Research framework for evaluating reasoning and decision
+                behavior of LLM based autonomous agents in CARLA.
               </p>
 
               <div class="meta">
@@ -165,31 +175,23 @@
               </div>
 
               <p class="small">
-                Evaluates and visualizes how LLM based driving agents make decisions
-                across challenging simulation scenarios.
+                Outcome: built an evaluation and visualization pipeline to
+                analyze agent decision behavior across scenarios.
               </p>
 
               <div class="links">
                 <a
-                  href="https://github.com/AliAlj/REVO"
+                  href="https://github.com/AliAtUmich/REVO-LLM-Autonomous-Driving"
                   target="_blank"
                   rel="noreferrer"
-                  >Source Code</a
-                >
+                >Source Code</a>
               </div>
             </article>
 
             <!-- AIMGAME -->
             <article class="card">
-              <div class="card-top project-title">
-                <div class="project-name">
-                  <img
-                    src="./assets/aimgame-logo.png"
-                    alt="AimGame app logo"
-                    class="project-logo"
-                  />
-                  <h3>AimGame</h3>
-                </div>
+              <div class="card-top">
+                <h3>AimGame</h3>
                 <span class="badge complete">Complete</span>
               </div>
 
@@ -205,8 +207,8 @@
               </div>
 
               <p class="small">
-                Built with fast iteration and a tight feedback loop between
-                settings and results.
+                Outcome: shipped a live demo with a tight settings to performance
+                feedback loop.
               </p>
 
               <div class="links">
@@ -214,14 +216,12 @@
                   href="https://aliatumich.github.io/AimGame/"
                   target="_blank"
                   rel="noreferrer"
-                  >Live Demo</a
-                >
+                >Live Demo</a>
                 <a
                   href="https://github.com/AliAtUmich/AimGame"
                   target="_blank"
                   rel="noreferrer"
-                  >Source Code</a
-                >
+                >Source Code</a>
               </div>
             </article>
           </div>
@@ -235,9 +235,7 @@
           <div class="skills">
             <div class="skill-group">
               <h3>Development</h3>
-              <p class="muted">
-                SwiftUI, JavaScript, Python, HTML, CSS, Git
-              </p>
+              <p class="muted">SwiftUI, JavaScript, Python, HTML, CSS, Git</p>
             </div>
 
             <div class="skill-group">
@@ -274,20 +272,25 @@
               target="_blank"
               rel="noreferrer"
               class="connect-link"
-              >GitHub</a
             >
+              <div class="connect-icon">GitHub</div>
+              <div class="connect-text">/AliAlj</div>
+            </a>
+
             <a
               href="https://www.linkedin.com/in/ali-alj/"
               target="_blank"
               rel="noreferrer"
               class="connect-link"
-              >LinkedIn</a
             >
-            <a
-              href="mailto:alimjahmi@gmail.com"
-              class="connect-link"
-              >Email</a
-            >
+              <div class="connect-icon">LinkedIn</div>
+              <div class="connect-text">/ali-alj</div>
+            </a>
+
+            <a href="mailto:alimjahmi@gmail.com" class="connect-link">
+              <div class="connect-icon">Email</div>
+              <div class="connect-text">alimjahmi@gmail.com</div>
+            </a>
           </div>
         </div>
       </section>
