--- a/wordronin.html
+++ b/wordronin.html
@@ -8,7 +8,7 @@
       name="description"
       content="WordRonin is an in progress iOS word game by Ali Aljahmi focused on pacing, scoring, and accessible play."
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.css?v=3" />
   </head>
 
   <body>
