--- a/aimgame.html
+++ b/aimgame.html
@@ -8,7 +8,7 @@
       name="description"
       content="AimGame is a web based aim trainer by Ali Aljahmi with a tight settings to performance feedback loop."
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.css?v=3"/>
   </head>
 
   <body>
