--- a/alfibat.html
+++ b/alfibat.html
@@ -8,7 +8,7 @@
       name="description"
       content="AlfiBaT is a personal iPad app built by Ali Aljahmi for the Swift Student Challenge to help beginners learn Arabic letters."
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.css?v=3" />
   </head>
 
   <body>
