--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Portfolio of Ali Aljahmi: AlfiBaT, WordRonin, REVO, AimGame."
     />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles.css?v=3" />
   </head>
 
   <body>
