--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
 
           <div class="about-card">
-            <h3 class="about-title">What I bring</h3>
+            <h3 class="about-title">What I offer</h3>
             <ul class="list">
               <li>Turn open ended problems into concrete next steps</li>
               <li>Organize complex work into clear, usable outputs</li>
