WordRonin marked complete + added TestFlight link

--- a/wordronin.html
+++ b/wordronin.html
@@ -35,6 +35,16 @@
       <span class="pill">Accessibility</span>
     </div>
 
+    <div class="links" style="margin-top:20px;">
+      <a href="https://testflight.apple.com/join/aYfRNrcq"
+        target="_blank"
+        rel="noreferrer"
+        class="btn primary">
+        View on TestFlight
+      </a>
+    </div>
+
+
     <h2 style="margin-top:40px;">Gameplay Screens</h2>
 
     <div class="project-gallery">
