WordRonin marked complete + added TestFlight link

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <p class="small">
-                  Outcome: built focused learning loops for recognition,
+                  Outcome: Built focused learning loops for recognition,
                   pronunciation, and writing practice.
                 </p>
               </article>
@@ -139,7 +139,7 @@
                 </div>
 
                 <p class="small">
-                  Outcome: implemented a core gameplay loop designed for fast
+                  Outcome: Implemented a core gameplay loop designed for fast
                   iteration and playtesting.
                 </p>
               </article>
@@ -163,7 +163,7 @@
               </div>
 
               <p class="small">
-                Outcome: built an evaluation and visualization pipeline to
+                Outcome: Built an evaluation and visualization pipeline to
                 analyze agent decision behavior across scenarios.
               </p>
 
@@ -194,7 +194,7 @@
               </div>
 
               <p class="small">
-                Outcome: shipped a live demo with a tight settings to performance
+                Outcome: Shipped a live demo with a tight settings to performance
                 feedback loop.
               </p>
 
